Changed width to max-width to prevent image stretching
git-svn-id: https://192.168.1.50:9880/easyshop_svn/trunk@3586 2929c1f8-612a-3548-b275-2a983e7c7391

--- a/web/assets/css/style_new.css
+++ b/web/assets/css/style_new.css
@@ -516,7 +516,7 @@ span.seller-name .rating_criteria{
 }
 
 #tabs-1 p img {
-	width: 750px;
+	max-width: 750px;
 }
 
 #tabs-1 ul {
